[package]
name = "ninja-target-path"
version = "0.1.0"
authors = ["Khyber Sen <kkysen@gmail.com>"]
edition = "2018"
description = "query and cache the output path of a ninja target"
license = "MIT"
repository = "https://github.com/kkysen/ninja-target-path"
homepage = "https://github.com/kkysen/ninja-target-path"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["ninja"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
anyhow = "1.0.38"
apply = "0.3.0"
clap = "2.33.3"
structopt = { version = "0.3.21", features = ["paw"] }
paw = "1.0.0"
fs-err = "2.5.0"
checked_command = "0.2.4"
to_trait = "0.1.1"
